--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>eu.mosaic.web</groupId>
+  <groupId>eu.mosaic.JettyAmqpConnector</groupId>
   <artifactId>jetty-connector</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -28,6 +28,12 @@
     </dependency>
 
     <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
@@ -47,12 +53,31 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>eu.mosaic.JettyAmqpConnector.ServerCommandLine</mainClass>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib</classpathPrefix>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+
+      <plugin>
 	<artifactId>maven-assembly-plugin</artifactId>
 	<version>2.2</version>
 	<configuration>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
+	  <archive>
+            <manifest>
+              <mainClass>eu.mosaic.JettyAmqpConnector.ServerCommandLine</mainClass>
+            </manifest>
+          </archive>
         </configuration>
 	<executions>
           <execution>
@@ -66,6 +91,7 @@
       </plugin>
       
 
+      
     </plugins>
   </build>
 
