--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,21 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<!--
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<systemProperties>
+						<property>
+							<name>java.library.path</name>
+							<value>../zeromq/lib</value>
+						</property>
+					</systemProperties>
+				</configuration>
+			</plugin>
+			-->
 		</plugins>
 	</build>
 	<properties>
