--- a/interoperability-examples/pom.xml
+++ b/interoperability-examples/pom.xml
@@ -9,11 +9,11 @@
 		<artifactId>interoperability-parent</artifactId>
 		<version>0.2-SNAPSHOT</version>
 	</parent>
-	<artifactId>interoperability-zeromq</artifactId>
+	<artifactId>interoperability-examples</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>interoperability-core</artifactId>
+			<artifactId>interoperability-zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -24,16 +24,6 @@
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-transcript</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>tools-miscellaneous</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.mosaic_cloud</groupId>
-			<artifactId>zeromq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
