--- a/interoperability-tools/pom.xml
+++ b/interoperability-tools/pom.xml
@@ -7,13 +7,23 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>interoperability-parent</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<version>0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>interoperability-tools</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>interoperability-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud</groupId>
+			<artifactId>tools-transcript</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud</groupId>
+			<artifactId>tools-miscellaneous</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
