Added exception handling infrastructure. Refactorings.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>tools-callbacks</module>
+		<module>tools-exceptions</module>
 		<module>tools-miscellaneous</module>
 		<module>tools-transcript</module>
 	</modules>
