--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<argLine>-Djava.library.path=../zeromq/lib</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<properties>
