--- a/components-tools/pom.xml
+++ b/components-tools/pom.xml
@@ -31,5 +31,10 @@
 			<artifactId>json-smart</artifactId>
 			<version>1.0.4-2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.8.1</version>
+		</dependency>
 	</dependencies>
 </project>
