--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>tools-callbacks</module>
 		<module>tools-exceptions</module>
+		<module>tools-json</module>
 		<module>tools-miscellaneous</module>
 		<module>tools-transcript</module>
 	</modules>
