--- a/components-tools/pom.xml
+++ b/components-tools/pom.xml
@@ -18,6 +18,16 @@
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
+			<artifactId>tools-exceptions</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud</groupId>
+			<artifactId>tools-json</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-miscellaneous</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -25,16 +35,6 @@
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>tools-transcript</artifactId>
 			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>net.minidev</groupId>
-			<artifactId>json-smart</artifactId>
-			<version>1.0.4-2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.8.1</version>
 		</dependency>
 	</dependencies>
 </project>
