--- a/tools-json/pom.xml
+++ b/tools-json/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>json-smart</artifactId>
-			<version>1.0.4-2</version>
+			<version>1.0.6.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
