Draft version of cloudlet.
--HG--
rename : mOSAIC/src/mosaic-cloudlet/mosaic/cloudlet/runtime/CloudletHandler.java => mOSAIC/src/mosaic-cloudlet/mosaic/cloudlet/runtime/CloudletDummyContainer.java
rename : mOSAIC/test/mosaic/core/configuration/tests/configuration-test.prop => mOSAIC/test/resources/configuration-test.prop
rename : mOSAIC/test/mosaic/driver/kvstore/tests/memcached-test.prop => mOSAIC/test/resources/memcached-test.prop

--- a/mOSAIC/.classpath
+++ b/mOSAIC/.classpath
@@ -14,5 +14,8 @@
 	<classpathentry kind="lib" path="lib/commons-cli-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/rabbitmq-client.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
