--- a/mOSAIC/.classpath
+++ b/mOSAIC/.classpath
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry excluding="mosaic-cloudlet/|mosaic-connector/|mosaic-core/|mosaic-driver/|mosaic-interop/" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="src" path="src/mosaic-driver"/>
 	<classpathentry kind="src" path="src/mosaic-connector"/>
-	<classpathentry kind="src" path="src/mosaic-core"/>
-	<classpathentry kind="src" path="src/mosaic-interop"/>
 	<classpathentry kind="src" path="src/mosaic-cloudlet"/>
+	<classpathentry kind="src" path="src/mosaic-core"/>
+	<classpathentry kind="src" path="src/mosaic-driver"/>
+	<classpathentry kind="src" path="src/mosaic-interop"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/memcached-2.5.jar"/>
 	<classpathentry kind="lib" path="lib/avro-1.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/avro-tools-1.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/rabbitmq-client.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/amqp-client-2.4.1.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
