--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-deploy</artifactId>
-			<version>7.2.2.v20101205</version>
+			<version>8.0.0.M3</version>
 		</dependency>
 
 		<dependency>
