--- a/mOSAIC/src/mosaic-driver/mosaic/driver/config.properties
+++ b/mOSAIC/src/mosaic-driver/mosaic/driver/config.properties
@@ -12,12 +12,15 @@ AmqpDriver.4=amqp.passwd
 AmqpDriver.5=amqp.virtual_host
 AmqpDriver.6=amqp.max_reconnection_tries
 AmqpDriver.7=amqp.min_reconnection_time
+KVStoreDriver.0=kvstore.host
+KVStoreDriver.1=kvstore.port
+KVStoreDriver.2=kvstore.driver_threads
+KVStoreDriver.3=kvstore.bucket
+KVStoreDriver.4=kvstore.passwd
+KVStoreDriver.5=kvstore.user
+KVStoreDriver.6=kvstore.driver_name
 MemcachedDriver.0=memcached.host_
-MemcachedDriver.1=memcached.bucket
-MemcachedDriver.2=memcached.user
-MemcachedDriver.3=memcached.port_
-MemcachedDriver.4=memcached.driver_threads
-MemcachedDriver.5=memcached.passwd
+MemcachedDriver.1=memcached.port_
 ResponseTransmitter.1=interop.resp.amqp.host
 ResponseTransmitter.2=interop.resp.amqp.port
 ResponseTransmitter.3=interop.resp.amqp.user
