--- a/mOSAIC/build.xml
+++ b/mOSAIC/build.xml
@@ -151,10 +151,29 @@
 		<junit>
 			<batchtest fork="yes" todir="${test.output.dir}">
 				<fileset dir="${test.dir}">
-					<include name="mosaic/driver/**/*.java" />
+					<include name="mosaic/driver/**/*Test.java" />
+					<exclude name="mosaic/driver/**/Redis*Test.java"/>
 				</fileset>
 				<formatter type="plain" usefile="true" />
 			</batchtest>
+			<classpath>
+				<fileset dir="lib">
+					<include name="**/*.jar" />
+				</fileset>
+				<fileset dir=".">
+					<include name="**/*.jar" />
+				</fileset>
+			</classpath>
+		</junit>
+	</target>
+
+	<target name="redis-tests" description="Runs the driver tests. Assumes a membase store is running on localhost.">
+		<mkdir dir="${test.output.dir}" />
+		<junit>
+			<test name="mosaic.driver.kvstore.tests.RedisDriverTest" todir="${test.output.dir}">
+			</test>
+
+			<formatter type="plain" usefile="true" />
 			<classpath>
 				<fileset dir="lib">
 					<include name="**/*.jar" />
@@ -171,7 +190,8 @@
 		<junit>
 			<batchtest fork="yes" todir="${test.output.dir}">
 				<fileset dir="${test.dir}">
-					<include name="mosaic/connector/**/*.java" />
+					<include name="mosaic/connector/**/*Test.java" />
+					<exclude name="mosaic/connector/amqp/**/*Test.java" />
 				</fileset>
 				<formatter type="plain" usefile="true" />
 			</batchtest>
@@ -304,6 +324,31 @@
 			<arg value="compile" />
 			<arg value="protocol" />
 			<arg value="protocol/amqp.avpr" />
+			<arg value="protocol/src" />
+			<classpath>
+				<fileset dir="lib">
+					<include name="avro-tools-gen.jar" />
+				</fileset>
+			</classpath>
+		</java>
+	</target>
+
+	<target name="kv-idl" description="Generates classes for KEY-VALUE stores and memcached protocol">
+		<java jar="lib/avro-tools-1.5.0.jar" fork="true">
+			<arg value="idl" />
+			<arg value="protocol/memcached.avdl" />
+			<arg value="protocol/memcached.avpr" />
+			<classpath>
+				<fileset dir="lib">
+					<include name="avro-tools*.jar" />
+					<include name="slf4j*.jar" />
+				</fileset>
+			</classpath>
+		</java>
+		<java jar="lib/avro-tools-gen.jar" fork="true">
+			<arg value="compile" />
+			<arg value="protocol" />
+			<arg value="protocol/memcached.avpr" />
 			<arg value="protocol/src" />
 			<classpath>
 				<fileset dir="lib">
