--- a/mOSAIC/src/mosaic-connector/mosaic/connector/config.properties
+++ b/mOSAIC/src/mosaic-connector/mosaic/connector/config.properties
@@ -3,12 +3,12 @@ AbstractConnectorReactor.1=interop.resp.amqp.port
 AbstractConnectorReactor.2=interop.resp.amqp.user
 AbstractConnectorReactor.3=interop.resp.amqp.passwd
 AbstractConnectorReactor.4=interop.resp.amqp.exchange
-AbstractConnectorReactor.5=interop.resp.amqp.rountingkey
+AbstractConnectorReactor.5=interop.resp.amqp.routingkey
 AmqpConnector.0=amqp.connector_threads
 ConnectorProxy.0=interop.req.amqp.host
 ConnectorProxy.1=interop.req.amqp.port
 ConnectorProxy.2=interop.req.amqp.user
 ConnectorProxy.3=interop.req.amqp.passwd
 ConnectorProxy.4=interop.req.amqp.exchange
-ConnectorProxy.5=interop.req.amqp.rountingkey
-MemcachedStoreConnector.0=memcached.connector_threads
+ConnectorProxy.5=interop.req.amqp.routingkey
+KeyValueStoreConnector.0=kvstore.connector_threads
