--- a/mOSAIC/src/mosaic-driver/mosaic/driver/config.properties
+++ b/mOSAIC/src/mosaic-driver/mosaic/driver/config.properties
@@ -3,7 +3,7 @@ AbstractDriverStub.1=interop.req.amqp.port
 AbstractDriverStub.2=interop.req.amqp.user
 AbstractDriverStub.3=interop.req.amqp.passwd
 AbstractDriverStub.4=interop.req.amqp.exchange
-AbstractDriverStub.5=interop.req.amqp.rountingkey
+AbstractDriverStub.5=interop.req.amqp.routingkey
 AmqpDriver.0=amqp.driver_threads
 AmqpDriver.1=amqp.host
 AmqpDriver.2=amqp.port
