--- a/mOSAIC/.classpath
+++ b/mOSAIC/.classpath
@@ -7,7 +7,11 @@
 	<classpathentry kind="src" path="src/mosaic-core"/>
 	<classpathentry kind="src" path="src/mosaic-driver"/>
 	<classpathentry kind="src" path="src/mosaic-interop"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="D:/JDK6-SRC/j2se/src/share/classes"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/avro-1.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.1.jar"/>
