--- a/mOSAIC/src/mosaic-cloudlet/mosaic/cloudlet/config.properties
+++ b/mOSAIC/src/mosaic-cloudlet/mosaic/cloudlet/config.properties
@@ -6,3 +6,4 @@ AmqpQueueAccessor.4=consumer
 CloudletDummyContainer.0=cloudlet.main_class
 CloudletDummyContainer.1=cloudlet.state_class
 CloudletDummyContainer.2=cloudlet.resource_file
+KeyValueAccessor.0=kvstore.connector_name
