Updated ignore files.

--- a/.hgignore
+++ b/.hgignore
@@ -1,10 +1,11 @@
 
 syntax: regexp
 
-^\..*$
+^(.*/)?\..*$
 
 ^(.*/)?target$
+^(.*/)?lib$
 ^(.*/)?META-INF$
 
-^.*\#$
-^.*\~$
+^(.*/)?.*\#$
+^(.*/)?.*\~$
