--- a/mosaic-mvn/mosaic-core/pom.xml
+++ b/mosaic-mvn/mosaic-core/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>mOSAIC-API</artifactId>
-		<groupId>mosaic.ieat</groupId>
+		<groupId>eu.mosaic_cloud</groupId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<groupId>mosaic.ieat</groupId>
+	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>mosaic-core</artifactId>
 	<name>mOSAIC core</name>
 	<description>mOSAIC Core classes</description>
@@ -73,6 +73,10 @@
 		</dependency>
 	</dependencies>
 
+	<organization>
+		<name>eAustria Research Institute</name>
+		<url>www.ieat.ro</url>
+	</organization>
 	<build>
 		<plugins>
 			<plugin>
