--- a/mosaic-mvn/mosaic-interop/pom.xml
+++ b/mosaic-mvn/mosaic-interop/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>mOSAIC-API</artifactId>
-		<groupId>mosaic.ieat</groupId>
+		<groupId>eu.mosaic_cloud</groupId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<groupId>mosaic.ieat</groupId>
+	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>mosaic-interop</artifactId>
 	<name>mOSAIC interoperability layer</name>
 	<description>mOSAIC InterOperability implementation</description>
@@ -20,6 +20,10 @@
 			<version>1.5.1</version>
 		</dependency>
 	</dependencies>
+	<organization>
+		<name>eAustria Research Institute</name>
+		<url>www.ieat.ro</url>
+	</organization>
 	<build>
 		<plugins>
 			<plugin>
