--- a/mosaic-mvn/mosaic-examples/pom.xml
+++ b/mosaic-mvn/mosaic-examples/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>mosaic-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>spy</groupId>
+			<artifactId>spymemcached</artifactId>
+			<version>2.6</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<organization>
 		<name>eAustria Research Institute</name>
