--- a/mosaic-mvn/.classpath
+++ b/mosaic-mvn/.classpath
@@ -13,6 +13,7 @@
 	<classpathentry kind="src" path="mosaic-cloudlet/src/test/java"/>
 	<classpathentry kind="src" path="mosaic-driver/src/main/java"/>
 	<classpathentry kind="src" path="mosaic-examples/src/main/java"/>
+	<classpathentry kind="src" path="mosaic-driver/src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
