--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>tools-callbacks</module>
+		<module>tools-classpath-exporter</module>
 		<module>tools-exceptions</module>
 		<module>tools-json</module>
 		<module>tools-miscellaneous</module>
