--- a/mosaic-mvn/mosaic-driver/pom.xml
+++ b/mosaic-mvn/mosaic-driver/pom.xml
@@ -5,7 +5,6 @@
 		<artifactId>mOSAIC-API</artifactId>
 		<groupId>eu.mosaic_cloud</groupId>
 		<version>0.1-SNAPSHOT</version>
-		<relativePath>..</relativePath>
 	</parent>
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>mosaic-driver</artifactId>
@@ -115,6 +114,11 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>mosaic.driver.DriverPreMain</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
 				<executions>
 					<execution>
