Repaired some resource retrieving bugs.

--- a/mosaic-mvn/mosaic-cloudlet/src/main/resources/mosaic/cloudlet/config.properties
+++ b/mosaic-mvn/mosaic-cloudlet/src/main/resources/mosaic/cloudlet/config.properties
@@ -3,6 +3,11 @@ AmqpQueueAccessor.1=amqp.routing_key
 AmqpQueueAccessor.2=amqp.queue
 AmqpQueueAccessor.3=publisher
 AmqpQueueAccessor.4=consumer
+AmqpQueueAccessor.5=amqp.exchange_type
+AmqpQueueAccessor.6=amqp.exclusive
+AmqpQueueAccessor.7=amqp.auto_delete
+AmqpQueueAccessor.8=amqp.passive
+AmqpQueueAccessor.9=amqp.durable
 CloudletDummyContainer.0=cloudlet.main_class
 CloudletDummyContainer.1=cloudlet.state_class
 CloudletDummyContainer.2=cloudlet.resource_file
@@ -17,3 +22,4 @@ ContainerComponentCallbacks.6=interop.driver.identifier
 ContainerComponentCallbacks.7=mosaic-component:get.channel.data
 ContainerComponentCallbacks.8=mosaic-container:run-queue-test
 ContainerComponentCallbacks.9=mosaic-container:run-complex-test
+ContainerComponentCallbacks.10=mosaic-container:deploy-cloudlet
