--- a/.hgignore
+++ b/.hgignore
@@ -28,3 +28,39 @@ syntax: regexp
 ^mosaic-mvn/mosaic-examples/target$
 syntax: regexp
 ^mosaic-mvn/mosaic-interop/target$
+syntax: regexp
+^mosaic-mvn/lib$
+syntax: regexp
+\.classpath$
+syntax: regexp
+^mosaic-mvn/\.settings$
+syntax: regexp
+^mosaic-mvn/mosaic-cloudlet/\.settings$
+syntax: regexp
+\.classpath$
+syntax: regexp
+^mosaic-mvn/mosaic-connector/\.settings$
+syntax: regexp
+\.classpath$
+syntax: regexp
+^mosaic-mvn/mosaic-core/\.settings$
+syntax: regexp
+\.classpath$
+syntax: regexp
+^mosaic-mvn/mosaic-driver/\.outputs$
+syntax: regexp
+^mosaic-mvn/mosaic-driver/\.settings$
+syntax: regexp
+\.classpath$
+syntax: regexp
+^mosaic-mvn/mosaic-examples/\.settings$
+syntax: regexp
+\.classpath$
+syntax: regexp
+^mosaic-mvn/mosaic-interop/\.settings$
+syntax: regexp
+^mosaic-mvn/mosaic-interop/\.classpath$
+syntax: regexp
+^mosaic-mvn/\.externalToolBuilders$
+syntax: regexp
+^mosaic-mvn/mosaic-interop/\.externalToolBuilders$
