--- a/mosaic-mvn/mosaic-core/pom.xml
+++ b/mosaic-mvn/mosaic-core/pom.xml
@@ -27,6 +27,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
